k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: employee.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: employee-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-frontend
                port:
                  number: 3000
